--- a/css/homepage.css
+++ b/css/homepage.css
@@ -257,7 +257,7 @@ body {
   text-shadow: -0.025em 0.025em 0 hsl(0, 100%, 75%);
 }
 .card:nth-child(1) .card-art {
-  background-image: url("../Assets/CardArt/image1.png");
+  background-image: url("../assets/CardArt/image1.png");
 }
 .card:nth-child(1):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(26.6666666667, 100%, 40%, 0.75);
@@ -282,7 +282,7 @@ body {
   text-shadow: -0.025em 0.025em 0 hsl(270, 100%, 75%);
 }
 .card:nth-child(2) .card-art {
-  background-image: url("../Assets/CardArt/image2.png");
+  background-image: url("../assets/CardArt/image2.png");
 }
 .card:nth-child(2):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(11.6666666667, 100%, 40%, 0.75);
@@ -307,7 +307,7 @@ body {
   text-shadow: -0.025em 0.025em 0 hsl(180, 100%, 75%);
 }
 .card:nth-child(3) .card-art {
-  background-image: url("../Assets/CardArt/image3.png");
+  background-image: url("../assets/CardArt/image3.png");
 }
 .card:nth-child(3):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(356.6666666667, 100%, 40%, 0.75);
@@ -333,7 +333,7 @@ body {
   text-shadow: -0.025em 0.025em 0 hsl(90, 100%, 75%);
 }
 .card:nth-child(4) .card-art {
-  background-image: url("../Assets/CardArt/image4.png");
+  background-image: url("../assets/CardArt/image4.png");
 }
 .card:nth-child(4):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(341.6666666667, 100%, 40%, 0.75);
