--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -72,14 +72,14 @@ body article {
 .swiper {
   width: 100%;
   height: 100%;
-  padding: 50px 20px;
+  padding: 600px;
   overflow: visible;
 }
 
 .swiper .parallax-bg {
   position: absolute;
-  width: 100%;
-  height: 200%;
+  width: 60%;
+  height: 60%;
   background-image: linear-gradient(90deg, #f6ad55 1%, rgba(244, 150, 62, 0.75) 25.75%, rgba(242, 125, 45, 0.5) 50.5%, rgba(255, 0, 0, 0) 100%), radial-gradient(100% 100% at 10% 100%, #fdd575 0%, #f7ab71 14.29%, #ee7f79 28.57%, #de4e8b 42.86%, #a24789 57.14%, #6d3c75 71.43%, #1a202c 100%);
   background-size: cover;
   background-position: bottom center;
@@ -108,6 +108,7 @@ body article {
      -moz-user-select: none;
           user-select: none;
   text-wrap: pretty;
+  scale: 0.8;
 }
 
 .swiper .swiper-slide .c1 {
