--- a/css/preloader.scss
+++ b/css/preloader.scss
@@ -4,4 +4,50 @@
     width: 100%;
     position: fixed ;
     z-index: 10000;
+    display: flex;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    align-items: center;
+}
+
+
+
+
+#loader-wrapper {
+    position: relative;
+    width: 100px;
+    height: 100px;
+}
+
+#loader {
+    border: 8px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 8px solid #3498db;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+#progress-bar {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    width: 0%;
+    height: 5px;
+    background-color: #3498db;
+}
+
+#progress-percent {
+    position: absolute;
+    top: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 16px;
+    color: #3498db;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
