--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -21,32 +21,22 @@ body, html {
 }
 
 #textcontainer {
+  font-family: "Times New Roman", Times, serif;
   position: inherit;
-  top: 0;
-  left: 0;
+  top: 30px;
+  left: 30px;
   z-index: 1;
   display: flex;
   justify-content: left;
   align-items: left;
   text-align: left;
   color: white;
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 30px;
+  padding-top: 30px;
   padding-bottom: 5%;
-  width: 50%;
-  height: 99em;
-}
-
-.reztext {
-  padding-top: 3em;
-  display: flex;
-  justify-content: left;
-  align-items: left;
-  font-size: calc((1vh + 1vw) / 1.2);
-  color: white;
-  z-index: 1;
-  overflow-wrap: break-word;
-  text-align: left;
+  width: 22em;
+  height: 1em;
+  word-break: break-all;
 }
 
 .gradienttext {
