--- a/css/aboutme.scss
+++ b/css/aboutme.scss
@@ -2,7 +2,7 @@ body, html {
   display: flex;
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
-  background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)),url('../assets/Interior.png');
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0)),url('/assets/Interior.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center bottom;
