--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Aceking";
-  src: url("../assets/fonts/Aceking.woff") format("woff");
+  src: url("/assets/fonts/Aceking.woff") format("woff");
 }
 .header {
   position: fixed;
@@ -65,7 +65,7 @@
 }
 
 .logo {
-  background-image: url("../assets/logo1.png");
+  background-image: url("/assets/logo1.png");
   background-repeat: no-repeat;
   background-size: contain; /* Maintain aspect ratio */
   background-position: center; /* Anchor the image to the top right corner */
