--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -97,7 +97,7 @@ body article {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  background-image: url("../assets/basecard4.png");
+  background-image: url("/assets/basecard4.png");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 7px;
@@ -116,7 +116,7 @@ body article {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("../assets/frame/c1.png");
+  background-image: url("/assets/frame/c1.png");
   background-size: contain;
   background-repeat: no-repeat;
   top: -25px;
@@ -129,7 +129,7 @@ body article {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("../assets/frame/c2.png");
+  background-image: url("/assets/frame/c2.png");
   background-size: contain;
   background-repeat: no-repeat;
   top: -25px;
@@ -142,7 +142,7 @@ body article {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("../assets/frame/c3.png");
+  background-image: url("/assets/frame/c3.png");
   background-size: contain;
   background-repeat: no-repeat;
   right: -25px;
@@ -155,7 +155,7 @@ body article {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("../assets/frame/c4.png");
+  background-image: url("/assets/frame/c4.png");
   background-size: contain;
   background-repeat: no-repeat;
   bottom: -25px;
