--- a/css/preloader.css
+++ b/css/preloader.css
@@ -1,5 +1,5 @@
 #preloader {
-  background: #000 url("../assets/cardloader.gif") no-repeat center center;
+  background: #000 url("/assets/cardloader.gif") no-repeat center center;
   height: 100vh;
   width: 100%;
   position: fixed;
