--- a/css/room.css
+++ b/css/room.css
@@ -35,7 +35,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../assets/floor.png");
+  background-image: url("/assets/floor.png");
 }
 
 .roomdiv {
@@ -67,7 +67,7 @@ room {
 }
 
 wall {
-  background-image: url("../assets/chapel2.png");
+  background-image: url("/assets/chapel2.png");
   background-position: bottom center;
   background-size: cover;
   width: 100rem;
