--- a/css/room.scss
+++ b/css/room.scss
@@ -52,7 +52,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("../assets/floor.png");
+  background-image: url("/assets/floor.png");
   //background-image: linear-gradient(164deg, rgba(236,150,25,1) 0%, rgba(255, 255, 255, 0) 60%);
   //mix-blend-mode: difference;
 }
@@ -91,7 +91,7 @@ room {
 
 wall {
   // background: radial-gradient($wall, darken($wall, 20));
-  background-image: url("../assets/chapel2.png");
+  background-image: url("/assets/chapel2.png");
 
 background-position: bottom center;
 background-size: cover;
