--- a/css/homepage.css
+++ b/css/homepage.css
@@ -112,7 +112,7 @@ section {
 
 .floorbox {
   box-sizing: border-box;
-  background-image: url("/assets/Floor.png");
+  background-image: url("../assets/Floor.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center; /* Added this line to center the background image */
@@ -139,7 +139,7 @@ canvas {
   position: relative;
   bottom: 0;
   box-sizing: border-box;
-  background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url("/assets/Interior.png");
+  background-image: linear-gradient(to right, rgb(0, 0, 0), rgba(0, 0, 0, 0)), url("../assets/Interior.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center bottom;
@@ -148,7 +148,7 @@ canvas {
 .greenblock {
   width: 100%;
   height: 100%;
-  background-image: url("/assets/gallery2.png");
+  background-image: url("../assets/gallery2.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -339,8 +339,8 @@ canvas {
   background-repeat: no-repeat;
   background-position: center;
   z-index: 100;
-  -webkit-mask-image: url("/assets/cardmask.png");
-          mask-image: url("/assets/cardmask.png");
+  -webkit-mask-image: url("../assets/cardmask.png");
+          mask-image: url("../assets/cardmask.png");
   -webkit-mask-size: 99%;
           mask-size: 99%; /* Ensure mask size matches the container size */
   -webkit-mask-position: center;
@@ -382,7 +382,7 @@ canvas {
 }
 
 .card:nth-child(1) .card-face {
-  background-image: url("/assets/basecard.png");
+  background-image: url("../assets/basecard.png");
   transform-origin: center;
   transform: translateY(18%) rotate(-18.75deg);
   z-index: 10;
@@ -394,7 +394,7 @@ canvas {
   text-shadow: -0.025em 0.025em 0 hsl(0, 100%, 75%);
 }
 .card:nth-child(1) .card-art {
-  background-image: url("/assets/CardArt/image1.png");
+  background-image: url("../assets/CardArt/image1.png");
 }
 .card:nth-child(1):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(26.6666666667, 100%, 40%, 0.75);
@@ -424,7 +424,7 @@ canvas {
 }
 
 .card:nth-child(2) .card-face {
-  background-image: url("/assets/basecard.png");
+  background-image: url("../assets/basecard.png");
   transform-origin: center;
   transform: translateY(6%) rotate(-6.25deg);
   z-index: 9;
@@ -434,7 +434,7 @@ canvas {
   text-shadow: -0.025em 0.025em 0 hsl(270, 100%, 75%);
 }
 .card:nth-child(2) .card-art {
-  background-image: url("/assets/CardArt/image2.png");
+  background-image: url("../assets/CardArt/image2.png");
 }
 .card:nth-child(2):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(11.6666666667, 100%, 40%, 0.75);
@@ -464,7 +464,7 @@ canvas {
 }
 
 .card:nth-child(3) .card-face {
-  background-image: url("/assets/basecard.png");
+  background-image: url("../assets/basecard.png");
   transform-origin: center;
   transform: translateY(6%) rotate(6.25deg);
   z-index: 8;
@@ -474,7 +474,7 @@ canvas {
   text-shadow: -0.025em 0.025em 0 hsl(180, 100%, 75%);
 }
 .card:nth-child(3) .card-art {
-  background-image: url("/assets/CardArt/image3.png");
+  background-image: url("../assets/CardArt/image3.png");
 }
 .card:nth-child(3):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(356.6666666667, 100%, 40%, 0.75);
@@ -504,7 +504,7 @@ canvas {
 }
 
 .card:nth-child(4) .card-face {
-  background-image: url("/assets/basecard.png");
+  background-image: url("../assets/basecard.png");
   transform-origin: center;
   transform: translateY(18%) rotate(18.75deg);
   z-index: 7;
@@ -516,7 +516,7 @@ canvas {
   text-shadow: -0.025em 0.025em 0 hsl(90, 100%, 75%);
 }
 .card:nth-child(4) .card-art {
-  background-image: url("/assets/CardArt/image4.png");
+  background-image: url("../assets/CardArt/image4.png");
 }
 .card:nth-child(4):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(341.6666666667, 100%, 40%, 0.75);
@@ -709,7 +709,7 @@ button:nth-child(2) {
 }
 
 .productImg {
-  background-image: url("/assets/shop/clothes/crewneck1.png");
+  background-image: url("../assets/shop/clothes/crewneck1.png");
   background-size: contain;
   background-repeat: no-repeat;
   height: 200px;
@@ -799,11 +799,11 @@ button:nth-child(2) {
 }
 
 .phone {
-  background-image: url("/assets/footer/phone.png");
+  background-image: url("../assets/footer/phone.png");
 }
 
 .email {
-  background-image: url("/assets/footer/email2.png");
+  background-image: url("../assets/footer/email2.png");
 }
 
 @media screen and (max-width: 768px) {
@@ -959,7 +959,7 @@ button:nth-child(2) {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  background-image: url("/assets/basecard4.png");
+  background-image: url("../assets/basecard4.png");
   background-repeat: no-repeat;
   background-size: 100% 100%; /* Stretch to cover */
   border-radius: 7px;
@@ -978,7 +978,7 @@ button:nth-child(2) {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("/assets/frame/c1.png");
+  background-image: url("../assets/frame/c1.png");
   background-size: contain;
   background-repeat: no-repeat;
   top: -25px;
@@ -991,7 +991,7 @@ button:nth-child(2) {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("/assets/frame/c2.png");
+  background-image: url("../assets/frame/c2.png");
   background-size: contain;
   background-repeat: no-repeat;
   top: -25px;
@@ -1004,7 +1004,7 @@ button:nth-child(2) {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("/assets/frame/c3.png");
+  background-image: url("../assets/frame/c3.png");
   background-size: contain;
   background-repeat: no-repeat;
   right: -25px;
@@ -1017,7 +1017,7 @@ button:nth-child(2) {
   padding: 0;
   width: 128px;
   height: 128px;
-  background-image: url("/assets/frame/c4.png");
+  background-image: url("../assets/frame/c4.png");
   background-size: contain;
   background-repeat: no-repeat;
   bottom: -25px;
