--- a/css/portfolio.scss
+++ b/css/portfolio.scss
@@ -92,7 +92,7 @@ body article {
     // top: -50%;
     width: 60%;
     height: 60%;
-    // background-image: url("/assets/Interior.png");
+    // background-image: url("../assets/Interior.png");
     background-image:linear-gradient(90deg, #f6ad55 1%, rgba(244, 150, 62, 0.75) 25.75%, rgba(242, 125, 45, 0.5) 50.5%, rgba(255, 0, 0, 0) 100%), radial-gradient(100% 100% at 10% 100%, #fdd575 0%, #f7ab71 14.29%, #ee7f79 28.57%, #de4e8b 42.86%, #a24789 57.14%, #6d3c75 71.43%, #1a202c 100%);
     background-size: cover;
     background-position: bottom center;
@@ -111,7 +111,7 @@ body article {
     align-items: flex-start;
     justify-content: flex-start;
     //  background-color: rgba(102, 102, 102, 0.8);
-    background-image: url("/assets/basecard4.png");
+    background-image: url("../assets/basecard4.png");
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 7px;
@@ -158,8 +158,8 @@ body article {
         padding: 0;
         width: $image-scale;
         height: $image-scale;
-        background-image: url('/assets/frame/c#{$i}.png');
-        // background-image: url("/assets/frame/c4.png");
+        background-image: url('../assets/frame/c#{$i}.png');
+        // background-image: url("../assets/frame/c4.png");
         background-size: contain;
         background-repeat: no-repeat;
        
@@ -228,7 +228,7 @@ body article {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    // background-image: url("/assets/basetop2.png");
+    // background-image: url("../assets/basetop2.png");
     
     border-radius: 7px;
     padding: 20px;
