--- a/css/textbox.css
+++ b/css/textbox.css
@@ -40,7 +40,7 @@
 .corner-1 {
   width: 50px;
   height: 50px;
-  background-image: url("/assets/frame/c1.png");
+  background-image: url("../assets/frame/c1.png");
   position: absolute;
   right: auto;
   top: 0;
@@ -52,7 +52,7 @@
 .corner-2 {
   width: 50px;
   height: 50px;
-  background-image: url("/assets/frame/c2.png");
+  background-image: url("../assets/frame/c2.png");
   position: absolute;
   right: 0;
   top: 0;
@@ -64,7 +64,7 @@
 .corner-3 {
   width: 50px;
   height: 50px;
-  background-image: url("/assets/frame/c3.png");
+  background-image: url("../assets/frame/c3.png");
   position: absolute;
   right: 0;
   bottom: 0;
@@ -74,7 +74,7 @@
 .corner-4 {
   width: 50px;
   height: 50px;
-  background-image: url("/assets/frame/c4.png");
+  background-image: url("../assets/frame/c4.png");
   position: absolute;
   left: 0;
   bottom: 0;
@@ -85,7 +85,7 @@
   position: fixed;
   width: 100%;
   height: 5px;
-  background-image: url("/assets/frame/frame3.png");
+  background-image: url("../assets/frame/frame3.png");
   background-size: contain;
   z-index: -1;
   overflow: hidden;
@@ -103,7 +103,7 @@
   position: fixed;
   width: 5px;
   height: 100%;
-  background-image: url("/assets/frame/frame4.png");
+  background-image: url("../assets/frame/frame4.png");
   background-size: contain;
   z-index: -1;
   overflow: hidden;
@@ -121,7 +121,7 @@
   position: fixed;
   width: 100%;
   height: 5px;
-  background-image: url("/assets/frame/frame3.png");
+  background-image: url("../assets/frame/frame3.png");
   background-size: contain;
   z-index: -1;
   overflow: hidden;
@@ -140,7 +140,7 @@
   position: fixed;
   width: 5px;
   height: 100%;
-  background-image: url("/assets/frame/frame4.png");
+  background-image: url("../assets/frame/frame4.png");
   background-size: contain;
   z-index: -1;
   overflow: hidden;
