--- a/css/homepage.css
+++ b/css/homepage.css
@@ -15,6 +15,26 @@ body {
   overflow-x: hidden;
 }
 
+.blockbox {
+  position: absolute;
+  top: 4em;
+  background-color: #1c1c1c;
+  height: 10%;
+  width: 55%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  border-radius: 0px 0px 14px 14px;
+}
+
+.blockname {
+  font-size: calc((1vw + 1vh) / 0.4);
+  color: #9d8353;
+  text-align: center;
+  font-family: "playfair display";
+}
+
 .footer {
   scroll-snap-align: end; /* Snap the footer to the end of the container */
 }
@@ -55,7 +75,7 @@ body::-webkit-scrollbar {
   z-index: 1;
   top: 0;
   left: 0;
-  transform: translate3d(0, 0, 0);
+  transform: translate3d(0, -10vh, 0);
   --webkit-backface-visibility: hidden;
   --webkit-perspective: 1000;
 }
@@ -151,6 +171,7 @@ canvas {
   background-image: url("../assets/gallery2.png");
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 .blueblock {
@@ -373,7 +394,7 @@ canvas {
 }
 
 .card.hover .card-face {
-  transform: translateY(10%) rotate(0deg) scale(2.5);
+  transform: translateY(10vh) rotate(0deg) scale(2.5);
   transition-duration: 0ms;
   z-index: 5;
 }
@@ -410,7 +431,7 @@ canvas {
 }
 .card:nth-child(1):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-150px);
+  transform: translateY(-10vh);
   transition-duration: 0ms;
   z-index: 500;
 }
@@ -450,7 +471,7 @@ canvas {
 }
 .card:nth-child(2):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-150px);
+  transform: translateY(-10vh);
   transition-duration: 0ms;
   z-index: 500;
 }
@@ -490,7 +511,7 @@ canvas {
 }
 .card:nth-child(3):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-150px);
+  transform: translateY(-10vh);
   transition-duration: 0ms;
   z-index: 500;
 }
@@ -532,7 +553,7 @@ canvas {
 }
 .card:nth-child(4):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-150px);
+  transform: translateY(-10vh);
   transition-duration: 0ms;
   z-index: 500;
 }
@@ -737,8 +758,14 @@ button:nth-child(2) {
   position: relative;
   width: 100%;
   background-color: black;
+  background-image: url("../assets/footer/desktop2.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  bottom: 0;
   justify-content: space-between; /* This property aligns items on opposite ends */
   color: #ffffff;
+  min-width: 100%;
 }
 
 .contactsbox {
@@ -1206,4 +1233,29 @@ button:nth-child(2) {
   .swiper .parallax-bg {
     width: 320%;
   }
+}
+.musicblock {
+  width: 100%;
+  height: 100%;
+  background-color: #303030;
+  background-image: url("../assets/album.bmp");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top 10%;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.grain {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  pointer-events: none;
+  background: url("../assets/grain.gif");
+  opacity: 0.15;
+  z-index: 100000000000000000000000000000000000000;
 }/*# sourceMappingURL=homepage.css.map */
