--- a/css/textbox.scss
+++ b/css/textbox.scss
@@ -34,8 +34,11 @@
     text-shadow: 1px 1px 2px black;
     -webkit-text-shadow: 1px 1px 2px black;
     -moz-text-shadow: 1px 1px 2px black;
-    width: 74.8%;
+    width: 64.7%;
     left: 10%;
+    top: 6.1%;
+    text-align: inherit;
+    text-shadow: 2px 2px 1px black;
 }
 
 
