--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.cdnfonts.com/css/rose-quay");
 @font-face {
   font-family: "Aceking";
   src: url("../assets/fonts/Aceking.woff") format("woff");
@@ -26,11 +27,12 @@
   z-index: 661;
   font-weight: normal;
   text-align: center;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "Rose Quay", sans-serif;
   font-style: normal;
   color: #9d8353;
   box-shadow: rgba(3, 3, 3, 0);
   transition: color 1s ease, font-size 0.3s ease, font-style 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .header h1:hover {
@@ -39,22 +41,36 @@
   animation: fadeInToColor 1.3s ease forwards;
 }
 
+.header h1:not(:hover) {
+  animation: fadeOutFromColor 1.3s ease forwards;
+}
+
 @keyframes fadeInToColor {
   0% {
     font-weight: normal;
     text-align: center;
-    font-family: "Times New Roman", Times, serif;
+    font-family: "Rose Quay", sans-serif;
     font-style: normal;
     color: #9d8353;
-  }
-  50% {
-    color: rgba(238, 238, 238, 0);
-    font-style: normal;
   }
   100% {
     color: #eeeeee; /* Transition to hover color */
     font-size: 240%;
     font-style: oblique;
+  }
+}
+@keyframes fadeOutFromColor {
+  0% {
+    color: #eeeeee; /* Start from hover color */
+    font-size: 240%;
+    font-style: oblique;
+  }
+  100% {
+    font-weight: normal;
+    text-align: center;
+    font-family: "Rose Quay", sans-serif;
+    font-style: normal;
+    color: #9d8353;
   }
 }
 .logotext {
