--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Fondamento:ital@0;1&family=Imbue:opsz,wght@10..100,100..900&family=Mrs+Saint+Delafield&family=Ojuju:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url("https://db.onlinewebfonts.com/c/6211209062fecb7a46ec1a6b7de5dfa1?family=Nimbus_Sans_Becker_D_Bold_Italic");
+@import url("https://fonts.cdnfonts.com/css/optihollandselight-agency");
+@import url("https://fonts.cdnfonts.com/css/seeds-of-yesterday");
+@import url("https://fonts.cdnfonts.com/css/globoface-gothic-display-2001");
+@import url("https://fonts.cdnfonts.com/css/rose-quay");
 @import url("https://fonts.googleapis.com/css2?family=Nabla&display=swap");
 html,
 body {
@@ -17,22 +20,25 @@ body {
 
 .blockbox {
   position: absolute;
-  top: 4em;
+  top: 3.3em;
   background-color: #1c1c1c;
+  background-position: center;
   height: 10%;
   width: 55%;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-  border-radius: 0px 0px 14px 14px;
+  border-radius: 14px;
+  background-size: cover;
+  background-image: inherit;
 }
 
 .blockname {
   font-size: calc((1vw + 1vh) / 0.4);
-  color: #9d8353;
+  color: whitesmoke;
   text-align: center;
-  font-family: "playfair display";
+  font-family: "Rose Quay", sans-serif;
 }
 
 .footer {
@@ -419,9 +425,13 @@ canvas {
 }
 .card:nth-child(1):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(26.6666666667, 100%, 40%, 0.75);
-  transform: translateY(50%) rotate(0deg) scale(2);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(1):active .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(1):active .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -431,9 +441,14 @@ canvas {
 }
 .card:nth-child(1):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-10vh);
+  transform: translateY(-15vh);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(1):hover .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(1):hover .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -459,9 +474,13 @@ canvas {
 }
 .card:nth-child(2):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(11.6666666667, 100%, 40%, 0.75);
-  transform: translateY(50%) rotate(0deg) scale(2);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(2):active .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(2):active .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -471,9 +490,14 @@ canvas {
 }
 .card:nth-child(2):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-10vh);
+  transform: translateY(-15vh);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(2):hover .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(2):hover .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -499,9 +523,13 @@ canvas {
 }
 .card:nth-child(3):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(356.6666666667, 100%, 40%, 0.75);
-  transform: translateY(50%) rotate(0deg) scale(2);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(3):active .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(3):active .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -511,9 +539,14 @@ canvas {
 }
 .card:nth-child(3):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-10vh);
+  transform: translateY(-15vh);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(3):hover .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(3):hover .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -541,9 +574,13 @@ canvas {
 }
 .card:nth-child(4):active .card-face {
   box-shadow: inset 0 0 0 0.2em hsla(341.6666666667, 100%, 40%, 0.75);
-  transform: translateY(50%) rotate(0deg) scale(2);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(4):active .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(4):active .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -553,9 +590,14 @@ canvas {
 }
 .card:nth-child(4):hover .card-face {
   transform: translateY(0%) rotate(0deg) scale(1.5);
-  transform: translateY(-10vh);
+  transform: translateY(-15vh);
   transition-duration: 0ms;
   z-index: 500;
+}
+@media screen and (max-width: 400px) {
+  .card:nth-child(4):hover .card-face {
+    transform: translateY(-12VW);
+  }
 }
 .card:nth-child(4):hover .card-face:after {
   animation: fade 250ms ease-out forwards;
@@ -603,7 +645,6 @@ canvas {
   }
 }
 @media screen and (max-width: 375px) and (max-height: 812px) {
-  /* Your styles for smaller screens go here */
   body {
     background-image: 80%; /* Adjust the percentage as needed */
   }
@@ -1258,4 +1299,74 @@ button:nth-child(2) {
   background: url("../assets/grain.gif");
   opacity: 0.15;
   z-index: 100000000000000000000000000000000000000;
+}
+
+.imageoverlay {
+  width: 80%;
+  height: 80%;
+  z-index: 100001;
+  position: fixed;
+  display: none;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  left: 30%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  max-width: 50%;
+  /* Other styles as needed */
+}
+
+.imageoverlay::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("your-background-image-url.jpg"); /* Add your background image URL */
+  z-index: 1000000;
+  opacity: 1; /* Adjust opacity as needed */
+}
+
+@media screen and (max-width: 600px) {
+  .imageoverlay {
+    top: -15vw;
+    bottom: 63vw;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+.imageoverlay2 {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6901960784);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  z-index: 1000;
+  position: fixed;
+  display: none;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.imageoverlaytext {
+  width: 40%;
+  height: 50%;
+  position: absolute;
+  right: 4em;
+  top: 50%;
+  z-index: 10000;
+  color: whitesmoke;
+  right: 0;
+  font-family: "OPTIHollandseLight-Agency", sans-serif;
+}
+@media screen and (max-width: 600px) {
+  .imageoverlaytext {
+    bottom: 63vw;
+    left: 50%;
+    text-align: center;
+    font-size: 5vw;
+    transform: translateX(-50%);
+  }
 }/*# sourceMappingURL=homepage.css.map */
