--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/rose-quay");
+@import url("https://fonts.cdnfonts.com/css/mcenneking");
 @font-face {
   font-family: "Aceking";
   src: url("../assets/fonts/Aceking.woff") format("woff");
@@ -18,6 +19,7 @@
   align-items: center;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transition: 0.3s;
+  background-image: url("../assets/noise.png");
 }
 
 .header h1 {
@@ -27,7 +29,7 @@
   z-index: 661;
   font-weight: normal;
   text-align: center;
-  font-family: "Rose Quay", sans-serif;
+  font-family: "mcenneking", sans-serif;
   font-style: normal;
   color: #9d8353;
   box-shadow: rgba(3, 3, 3, 0);
@@ -49,7 +51,7 @@
   0% {
     font-weight: normal;
     text-align: center;
-    font-family: "Rose Quay", sans-serif;
+    font-family: "mcenneking", sans-serif;
     font-style: normal;
     color: #9d8353;
   }
@@ -68,7 +70,7 @@
   100% {
     font-weight: normal;
     text-align: center;
-    font-family: "Rose Quay", sans-serif;
+    font-family: "mcenneking", sans-serif;
     font-style: normal;
     color: #9d8353;
   }
