--- a/css/homepage.css
+++ b/css/homepage.css
@@ -3,6 +3,11 @@
 @import url("https://fonts.cdnfonts.com/css/seeds-of-yesterday");
 @import url("https://fonts.cdnfonts.com/css/globoface-gothic-display-2001");
 @import url("https://fonts.cdnfonts.com/css/rose-quay");
+@import url("https://fonts.cdnfonts.com/css/theano-didot");
+@import url("https://fonts.cdnfonts.com/css/h-hinga");
+@import url("https://fonts.cdnfonts.com/css/prosper-rules");
+@import url("https://fonts.cdnfonts.com/css/magical-dreams");
+@import url("https://fonts.cdnfonts.com/css/markofontina");
 @import url("https://fonts.googleapis.com/css2?family=Nabla&display=swap");
 html,
 body {
@@ -20,7 +25,7 @@ body {
 
 .blockbox {
   position: absolute;
-  top: 3.3em;
+  top: 4em;
   background-color: #1c1c1c;
   background-position: center;
   height: 10%;
@@ -28,17 +33,16 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0px 1px 4px black;
   border-radius: 14px;
-  background-size: cover;
-  background-image: inherit;
+  background-image: url("../assets/noise.png");
 }
 
 .blockname {
   font-size: calc((1vw + 1vh) / 0.4);
-  color: whitesmoke;
+  color: #9d8353;
   text-align: center;
-  font-family: "Rose Quay", sans-serif;
+  font-family: "Markofontina", sans-serif;
 }
 
 .footer {
@@ -99,7 +103,7 @@ body::-webkit-scrollbar {
   font-family: "Cinzel Decorative", serif;
   font-weight: 700;
   font-style: normal;
-  color: #b48811;
+  color: #9d8353;
   --start-scale: 1;
   --mid-scale: 1.05;
   --end-scale: 1.1;
@@ -1147,7 +1151,7 @@ button:nth-child(2) {
 }
 
 .swiper .swiper-slide h2 {
-  font-size: 200%;
+  font-size: 7vw;
   line-height: 110%;
   margin: 0 0 7px 0;
   color: rgb(0, 0, 0);
@@ -1324,7 +1328,6 @@ button:nth-child(2) {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("your-background-image-url.jpg"); /* Add your background image URL */
   z-index: 1000000;
   opacity: 1; /* Adjust opacity as needed */
 }
@@ -1360,13 +1363,22 @@ button:nth-child(2) {
   color: whitesmoke;
   right: 0;
   font-family: "OPTIHollandseLight-Agency", sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateY(-50%);
+  right: 2vw;
 }
 @media screen and (max-width: 600px) {
   .imageoverlaytext {
+    width: 75%;
+    text-align: justify;
+    overflow: scroll;
     bottom: 63vw;
     left: 50%;
-    text-align: center;
+    text-align: justify;
     font-size: 5vw;
     transform: translateX(-50%);
+    height: 40%;
   }
 }/*# sourceMappingURL=homepage.css.map */
