--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -1510,7 +1510,7 @@ $contactSize: 1000px;
 }
 
 .swiper .swiper-slide h2 {
-    font-size: 7vw;
+    font-size: 170%;
     line-height: 110%;
     margin: 0 0 7px 0;
     color: rgb(0, 0, 0);
