--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1151,7 +1151,7 @@ button:nth-child(2) {
 }
 
 .swiper .swiper-slide h2 {
-  font-size: 7vw;
+  font-size: 170%;
   line-height: 110%;
   margin: 0 0 7px 0;
   color: rgb(0, 0, 0);
